Stated work on provideCustomFeedback. Hot-swapped BreakableItemSuggestionProvider with better™ code by discord user 7410. Thanks 7410;

--- a/src/main/resources/assets/commandstatistics/lang/en_us.json
+++ b/src/main/resources/assets/commandstatistics/lang/en_us.json
@@ -22,6 +22,74 @@
   "commandstatistics.feedback.query.plural.killed"        : "%s has %s %s %s times."                             ,
   "commandstatistics.feedback.query.plural.alot.killed"   : "%s's been busy. They's %s %s %s times!"             ,
 
+  "commandstatistics.grammar.tense.mined.null"       : ".past",
+  "commandstatistics.grammar.tense.mined.single"     : ".present",
+  "commandstatistics.grammar.tense.mined.dual"       : ".past",
+  "commandstatistics.grammar.tense.mined.plural"     : ".past",
+  "commandstatistics.grammar.tense.mined.plural.alot": ".past",
+
+  "commandstatistics.grammar.tense.crafted.null"       : ".past",
+  "commandstatistics.grammar.tense.crafted.single"     : ".present",
+  "commandstatistics.grammar.tense.crafted.dual"       : ".past",
+  "commandstatistics.grammar.tense.crafted.plural"     : ".past",
+  "commandstatistics.grammar.tense.crafted.plural.alot": ".past",
+
+  "commandstatistics.grammar.tense.used.null"       : ".past",
+  "commandstatistics.grammar.tense.used.single"     : ".present",
+  "commandstatistics.grammar.tense.used.dual"       : ".past",
+  "commandstatistics.grammar.tense.used.plural"     : ".past",
+  "commandstatistics.grammar.tense.used.plural.alot": ".past",
+
+  "commandstatistics.grammar.tense.broken.null"       : ".past",
+  "commandstatistics.grammar.tense.broken.single"     : ".present",
+  "commandstatistics.grammar.tense.broken.dual"       : ".past",
+  "commandstatistics.grammar.tense.broken.plural"     : ".past",
+  "commandstatistics.grammar.tense.broken.plural.alot": ".past",
+
+  "commandstatistics.grammar.tense.picked_up.null"       : ".past",
+  "commandstatistics.grammar.tense.picked_up.single"     : ".present",
+  "commandstatistics.grammar.tense.picked_up.dual"       : ".past",
+  "commandstatistics.grammar.tense.picked_up.plural"     : ".past",
+  "commandstatistics.grammar.tense.picked_up.plural.alot": ".past",
+
+  "commandstatistics.grammar.tense.dropped.null"       : ".past",
+  "commandstatistics.grammar.tense.dropped.single"     : ".present",
+  "commandstatistics.grammar.tense.dropped.dual"       : ".past",
+  "commandstatistics.grammar.tense.dropped.plural"     : ".past",
+  "commandstatistics.grammar.tense.dropped.plural.alot": ".past",
+
+  "commandstatistics.grammar.tense.killed.null"       : "past",
+  "commandstatistics.grammar.tense.killed.single"     : "present",
+  "commandstatistics.grammar.tense.killed.dual"       : "past",
+  "commandstatistics.grammar.tense.killed.plural"     : "past",
+  "commandstatistics.grammar.tense.killed.plural.alot": "past",
+
+  "commandstatistics.grammar.tense.killed_by.null"       : "past",
+  "commandstatistics.grammar.tense.killed_by.single"     : "present",
+  "commandstatistics.grammar.tense.killed_by.dual"       : "past",
+  "commandstatistics.grammar.tense.killed_by.plural"     : "past",
+  "commandstatistics.grammar.tense.killed_by.plural.alot": "past",
+
+  "commandstatistics.stattype.mined.past"            : "mined"                                     ,
+  "commandstatistics.stattype.mined.present"         : "mine"                                      ,
+  "commandstatistics.stattype.crafted.past"          : "crafted"                                   ,
+  "commandstatistics.stattype.crafted.present"       : "craft"                                     ,
+  "commandstatistics.stattype.used.past"             : "used"                                      ,
+  "commandstatistics.stattype.used.present"          : "use"                                       ,
+  "commandstatistics.stattype.broken.past"           : "broken"                                    ,
+  "commandstatistics.stattype.broken.present"        : "break"                                     ,
+  "commandstatistics.stattype.picked_up.past"        : "picked up"                                 ,
+  "commandstatistics.stattype.picked_up.present"     : "pick up"                                   ,
+  "commandstatistics.stattype.dropped.past"          : "dropped"                                   ,
+  "commandstatistics.stattype.dropped.present"       : "drop"                                      ,
+  "commandstatistics.stattype.killed.past"           : "killed"                                    ,
+  "commandstatistics.stattype.killed_by"             : "been killed by",
+
+  "commandstatistics.grammar.tense.custom.null"       : "past"   ,
+  "commandstatistics.grammar.tense.custom.single"     : "present",
+  "commandstatistics.grammar.tense.custom.dual"       : "past"   ,
+  "commandstatistics.grammar.tense.custom.plural"     : "past"   ,
+  "commandstatistics.grammar.tense.custom.plural.alot": "past"   ,
 
   "_comment-2": "Conjugating words in flavors of psuedo-gender(linguistics) bullshit"                                   ,
 
@@ -228,22 +296,6 @@
   "commandstatistics.grammar.indefinite.plural.gender_13"        : "unused in en-US"                                    ,
   "commandstatistics.grammar.indefinite.plural.gender_14"        : "unused in en-US"                                    ,
   "commandstatistics.grammar.indefinite.plural.gender_15"        : "unused in en-US"                                    ,
-
-
-  "commandstatistics.stattype.mined.past"            : "mined"                                     ,
-  "commandstatistics.stattype.mined.present"         : "mine"                                      ,
-  "commandstatistics.stattype.crafted.past"          : "crafted"                                   ,
-  "commandstatistics.stattype.crafted.present"       : "craft"                                     ,
-  "commandstatistics.stattype.used.past"             : "used"                                      ,
-  "commandstatistics.stattype.used.present"          : "use"                                       ,
-  "commandstatistics.stattype.broken.past"           : "broken"                                    ,
-  "commandstatistics.stattype.broken.present"        : "break"                                     ,
-  "commandstatistics.stattype.picked_up.past"        : "picked up"                                 ,
-  "commandstatistics.stattype.picked_up.present"     : "pick up"                                   ,
-  "commandstatistics.stattype.dropped.past"          : "dropped"                                   ,
-  "commandstatistics.stattype.dropped.present"       : "drop"                                      ,
-  "commandstatistics.stattype.killed.past"           : "killed"                                    ,
-  "commandstatistics.stattype.killed_by"             : "been killed by",
 
 "_comment: fully irregular keys" : "",
   "commandstatistics.coast_armor_trim_smithing_template.dual.irregular"               : "Coast Armor Trims"             ,
