Continuing work on implementing `/statistics project`
Projects now update consistantly and correctly.

Fully implemented (minus feedback) `Project [ List | Start | Pause | Stop ]`.

*`list` lists all active and inactive projects in a players projectDirectories and pausedProjectDirectories.

*`start` adds a File `directory` to a player's `projectDirectories` and an associated `ServerStatHandler` to that player's ServerStatHandler's `projectsStatHandlers`. Once added in this way, a json for that player begins updating correctly.

*`pause` moves a File `directory` from a player's `projectDirectories` to that player's `pausedProjectDirectories.` It also moves its' associated `ServerStatHandler` from `projectStatHandlers` to `pausedProjectStatHandlers`. Moving in this way stops it from continuing to update, but allows it to still be queried by the (partially implemented) `project query` and `project store` command moods.

*`stop` removes a File `directory` and its associated ServerStatHandler from whichever collection they happen to be in. The stat/project/ directory and uuid.json are not deleted, but they are effectively 'archived,' as they are made unavailable to `project query` and `project store.`

*`pause` and `stop` have had further special function implemented. `all` ( `/statistics project [ pause | stop ] @p all`) causes all of @p's active or all active and inactive projects to be paused or stopped respectively. Due to this function, `start @p all` has been restricted from use and a project cannot be named "all."

Partially implemented project query.

--- a/src/main/resources/assets/cmdstats/lang/en_us.json
+++ b/src/main/resources/assets/cmdstats/lang/en_us.json
@@ -1,4 +1,15 @@
 {
+  "join.new_line": "%s\n  %s",
+  "feedback.project.list"             : "%s has %s active projects",
+  "feedback.project.list.paused"      : "%s has %s inactive projects",
+  "feedback.project.list.paused.also" : "%s alse has %s inactive projects",
+  "feedback.project.list.none"        : "%s has no active nor inactive projects",
+  "feedback.project.start"    : "Added %s players to the project %s:",
+  "feedback.project.start.new": "Added %s players to the new project %s:",
+  "feedback.project.stop"     : "Removed %s players to the project %s:",
+  "feedback.project.stop.all" : "Removed %s projects from among %s players. The projects removed were:",
+
+
 "_Comment: Parse the json" : "THESE ARE IMPORTANT FOR PARSING THE JSON. DETERMINES WHICH PLURALITY SHARE IDENTICAL CONJUGATIONS",
   "cmdstats.grammar.plurality.nil"    : "plural"  ,
   "cmdstats.grammar.plurality.single"  : "single"  ,
