Corrected a registration error that was causing some moods for the custom stats to not accept custom stats.

--- a/src/main/resources/assets/cmdstats/lang/en_us.json
+++ b/src/main/resources/assets/cmdstats/lang/en_us.json
@@ -55,18 +55,26 @@
   "cmdstats.feedback.format.project.start.new.gen"      : "Added %s players to the new %s project. They are:%s",
   
   "cmdstats.feedback.format.project.pause.nil"          : "Paused no players participation in the %s project",
-  "cmdstats.feedback.format.project.pause.one"          : "Paused %s player's participation in the %s project. They are:%s",
-  "cmdstats.feedback.format.project.pause.gen"          : "Paused %s players' participation in the %s project. They are:%s",
+  "cmdstats.feedback.format.project.pause.one"          : "Paused %s player's participation in the %s project. That player is:%s",
+  "cmdstats.feedback.format.project.pause.gen"          : "Paused %s players' participation in the %s project. Those players are:%s",
   "cmdstats.feedback.format.project.pause.all.nil"      : "Paused no players' participation in any project.",
   "cmdstats.feedback.format.project.pause.all.one.one"  : "Paused %s player's participation in %s project. That player was:%s\nThat project was:%s",
-  "cmdstats.feedback.format.project.pause.all.one.gen"  : "Paused %s player's participation in %s projects. That player was:%s\nThese projects were:%s",
-  "cmdstats.feedback.format.project.pause.all.gen.one"  : "Paused %s players' participation in %s project. These players were:%s\nThat project was:%s",
-  "cmdstats.feedback.format.project.pause.all.gen.gen"  : "Paused %s players' participation in %s projects. These players were:%s\nThese projects were:%s",
+  "cmdstats.feedback.format.project.pause.all.one.gen"  : "Paused %s player's participation in %s projects. That player was:%s\nThose projects were:%s",
+  "cmdstats.feedback.format.project.pause.all.gen.one"  : "Paused %s players' participation in %s project. Those players were:%s\nThat project was:%s",
+  "cmdstats.feedback.format.project.pause.all.gen.gen"  : "Paused %s players' participation in %s projects. Those players were:%s\nThose projects were:%s",
   
-  "cmdstats.feedback.format.project.stop"               : "Removed %s from the %s project.",
-  "cmdstats.feedback.format.project.stop.all"           : "Removed %s from %s projects. They were:\n%s.",
+  "cmdstats.feedback.format.project.stop.nil"           : "Removed no players from the %s project.",
+  "cmdstats.feedback.format.project.stop.one"           : "Removed %s player from the %s project. That player is:%s",
+  "cmdstats.feedback.format.project.stop.gen"           : "Removed %s players from the %s project. Those players are:%s",
+  "cmdstats.feedback.format.project.stop.all.nil"       : "Removed no players from any project.",
+  "cmdstats.feedback.format.project.stop.all.one.one"   : "Removed %s player from %s project. That player was:%s\nThat project was:%s",
+  "cmdstats.feedback.format.project.stop.all.one.gen"   : "Removed %s player from %s projects. That player was:%s\nThose projects were:%s",
+  "cmdstats.feedback.format.project.stop.all.gen.one"   : "Removed %s players from %s project. Those players were:%s\nThat project was:%s",
+  "cmdstats.feedback.format.project.stop.all.gen.gen"   : "Removed %s players  from %s projects. Those players were:%s\nThese projects were:%s",
+  
   "cmdstats.feedback.format.project.query"              : "While working on the %s project:\n%s",
   "cmdstats.feedback.format.project.store"              : "Stored in %s that while working on the %s project:\n%s",
+  
   "cmdstats.feedback.error.project.reserved"     : "The string \"%s\" is reserved and cannot be used as a project name.",
   "cmdstats.feedback.error.project.not_found"    : "%s is not a part of %s project.",
   "cmdstats.feedback.error.project.unspecified"  : "%s an expected but unspecified error occured.",
